--- a/public/styles.css
+++ b/public/styles.css
@@ -563,12 +563,8 @@ video {
   bottom: 0px;
 }
 
-.left-7{
-  left: 1.75rem;
-}
-
-.top-0{
-  top: 0px;
+.top-5{
+  top: 1.25rem;
 }
 
 .z-10{
@@ -583,21 +579,34 @@ video {
   grid-column: span 3 / span 3;
 }
 
-.col-span-2{
-  grid-column: span 2 / span 2;
-}
-
-.col-span-4{
-  grid-column: span 4 / span 4;
-}
-
 .col-span-7{
   grid-column: span 7 / span 7;
+}
+
+.col-span-5{
+  grid-column: span 5 / span 5;
+}
+
+.col-span-12{
+  grid-column: span 12 / span 12;
+}
+
+.col-span-9{
+  grid-column: span 9 / span 9;
+}
+
+.m-2{
+  margin: 0.5rem;
 }
 
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .ml-6{
@@ -612,12 +621,24 @@ video {
   margin-left: 2rem;
 }
 
-.ml-5{
-  margin-left: 1.25rem;
+.mt-6{
+  margin-top: 1.5rem;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
 }
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.ml-auto{
+  margin-left: auto;
 }
 
 .mb-6{
@@ -632,32 +653,32 @@ video {
   margin-top: 0.75rem;
 }
 
-.ml-auto{
-  margin-left: auto;
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .-ml-5{
   margin-left: -1.25rem;
 }
 
-.mt-6{
-  margin-top: 1.5rem;
+.mt-4{
+  margin-top: 1rem;
 }
 
-.mt-1{
-  margin-top: 0.25rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
+.mr-2{
+  margin-right: 0.5rem;
 }
 
 .-mt-\[60px\]{
   margin-top: -60px;
+}
+
+.ml-0{
+  margin-left: 0px;
 }
 
 .mt-0\.5{
@@ -672,16 +693,8 @@ video {
   margin-left: 1rem;
 }
 
-.-mt-4{
-  margin-top: -1rem;
-}
-
 .mr-6{
   margin-right: 1.5rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
 }
 
 .block{
@@ -698,10 +711,6 @@ video {
 
 .flex{
   display: flex;
-}
-
-.inline-flex{
-  display: inline-flex;
 }
 
 .grid{
@@ -724,16 +733,16 @@ video {
   height: 150px;
 }
 
+.h-full{
+  height: 100%;
+}
+
 .h-\[120px\]{
   height: 120px;
 }
 
 .h-7{
   height: 1.75rem;
-}
-
-.h-full{
-  height: 100%;
 }
 
 .min-h-screen{
@@ -756,8 +765,8 @@ video {
   width: 100%;
 }
 
-.w-1\/3{
-  width: 33.333333%;
+.w-10{
+  width: 2.5rem;
 }
 
 .w-\[120px\]{
@@ -772,16 +781,12 @@ video {
   width: 1.75rem;
 }
 
-.w-48{
-  width: 12rem;
+.max-w-sm{
+  max-width: 24rem;
 }
 
 .max-w-4xl{
   max-width: 56rem;
-}
-
-.max-w-sm{
-  max-width: 24rem;
 }
 
 .grow{
@@ -804,8 +809,16 @@ video {
   flex-direction: column;
 }
 
+.flex-col-reverse{
+  flex-direction: column-reverse;
+}
+
 .items-start{
   align-items: flex-start;
+}
+
+.items-end{
+  align-items: flex-end;
 }
 
 .items-center{
@@ -832,20 +845,6 @@ video {
   gap: 1rem;
 }
 
-.gap-x-8{
-  -webkit-column-gap: 2rem;
-          column-gap: 2rem;
-}
-
-.gap-x-6{
-  -webkit-column-gap: 1.5rem;
-          column-gap: 1.5rem;
-}
-
-.gap-y-8{
-  row-gap: 2rem;
-}
-
 .gap-x-4{
   -webkit-column-gap: 1rem;
           column-gap: 1rem;
@@ -855,8 +854,41 @@ video {
   row-gap: 1.5rem;
 }
 
+.gap-y-4{
+  row-gap: 1rem;
+}
+
+.gap-y-3{
+  row-gap: 0.75rem;
+}
+
+.gap-y-2{
+  row-gap: 0.5rem;
+}
+
+.gap-x-6{
+  -webkit-column-gap: 1.5rem;
+          column-gap: 1.5rem;
+}
+
+.self-center{
+  align-self: center;
+}
+
 .overflow-hidden{
   overflow: hidden;
+}
+
+.overflow-x-auto{
+  overflow-x: auto;
+}
+
+.text-ellipsis{
+  text-overflow: ellipsis;
+}
+
+.whitespace-nowrap{
+  white-space: nowrap;
 }
 
 .rounded-full{
@@ -869,6 +901,10 @@ video {
 
 .rounded{
   border-radius: 0.25rem;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .rounded-tl-2xl{
@@ -891,13 +927,8 @@ video {
   border-bottom-width: 1px;
 }
 
-.border-r{
-  border-right-width: 1px;
-}
-
-.border-gray-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+.border-t{
+  border-top-width: 1px;
 }
 
 .border-gray-400{
@@ -908,6 +939,11 @@ video {
 .border-gray-900{
   --tw-border-opacity: 1;
   border-color: rgb(17 24 39 / var(--tw-border-opacity));
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-white{
@@ -930,6 +966,16 @@ video {
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
+.border-red-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
+.border-red-800{
+  --tw-border-opacity: 1;
+  border-color: rgb(153 27 27 / var(--tw-border-opacity));
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -950,6 +996,11 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -968,16 +1019,6 @@ video {
 .bg-darkBrown{
   --tw-bg-opacity: 1;
   background-color: rgb(37 36 34 / var(--tw-bg-opacity));
-}
-
-.bg-red-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-40{
@@ -1016,6 +1057,10 @@ video {
   padding: 0.25rem;
 }
 
+.p-0{
+  padding: 0px;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1024,11 +1069,6 @@ video {
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .py-8{
@@ -1046,6 +1086,11 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1056,19 +1101,24 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-2\.5{
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-}
-
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
 
+.py-2\.5{
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .py-3\.5{
@@ -1083,6 +1133,10 @@ video {
 
 .text-center{
   text-align: center;
+}
+
+.text-right{
+  text-align: right;
 }
 
 .font-body{
@@ -1134,11 +1188,6 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -1147,6 +1196,11 @@ video {
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-gray-800{
@@ -1184,8 +1238,22 @@ video {
   color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
+.text-red-600{
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
 .underline-offset-2{
   text-underline-offset: 2px;
+}
+
+.outline-red-800{
+  outline-color: #991b1b;
+}
+
+.filter{
+  -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+          filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .backdrop-blur-md{
@@ -1208,9 +1276,42 @@ video {
     position: relative;
   }
 
+  .md\:left-7{
+    left: 1.75rem;
+  }
+
+  .md\:top-0{
+    top: 0px;
+  }
+
+  .md\:col-span-2{
+    grid-column: span 2 / span 2;
+  }
+
+  .md\:col-span-4{
+    grid-column: span 4 / span 4;
+  }
+
+  .md\:col-span-3{
+    grid-column: span 3 / span 3;
+  }
+
+  .md\:col-span-7{
+    grid-column: span 7 / span 7;
+  }
+
+  .md\:m-0{
+    margin: 0px;
+  }
+
   .md\:my-2{
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+  }
+
+  .md\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .md\:mt-16{
@@ -1245,8 +1346,16 @@ video {
     display: inline;
   }
 
+  .md\:flex{
+    display: flex;
+  }
+
   .md\:grid{
     display: grid;
+  }
+
+  .md\:h-full{
+    height: 100%;
   }
 
   .md\:min-h-screen{
@@ -1257,6 +1366,18 @@ video {
     width: auto;
   }
 
+  .md\:w-1\/3{
+    width: 33.333333%;
+  }
+
+  .md\:w-48{
+    width: 12rem;
+  }
+
+  .md\:w-0{
+    width: 0px;
+  }
+
   .md\:grow-0{
     flex-grow: 0;
   }
@@ -1265,12 +1386,36 @@ video {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:flex-row{
     flex-direction: row;
   }
 
+  .md\:flex-row-reverse{
+    flex-direction: row-reverse;
+  }
+
+  .md\:flex-col{
+    flex-direction: column;
+  }
+
+  .md\:items-start{
+    align-items: flex-start;
+  }
+
+  .md\:items-center{
+    align-items: center;
+  }
+
   .md\:justify-between{
     justify-content: space-between;
+  }
+
+  .md\:rounded-full{
+    border-radius: 9999px;
   }
 
   .md\:rounded-tl-2xl{
@@ -1281,8 +1426,20 @@ video {
     border-bottom-right-radius: 1rem;
   }
 
+  .md\:border-t-0{
+    border-top-width: 0px;
+  }
+
+  .md\:border-r{
+    border-right-width: 1px;
+  }
+
   .md\:p-8{
     padding: 2rem;
+  }
+
+  .md\:p-4{
+    padding: 1rem;
   }
 
   .md\:px-8{
