--- a/public/styles.css
+++ b/public/styles.css
@@ -551,6 +551,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -563,8 +567,24 @@ video {
   bottom: 0px;
 }
 
+.bottom-4{
+  bottom: 1rem;
+}
+
+.left-4{
+  left: 1rem;
+}
+
+.top-0{
+  top: 0px;
+}
+
 .top-5{
   top: 1.25rem;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .z-10{
@@ -621,10 +641,6 @@ video {
   margin-left: 2rem;
 }
 
-.mt-6{
-  margin-top: 1.5rem;
-}
-
 .mt-1{
   margin-top: 0.25rem;
 }
@@ -639,6 +655,10 @@ video {
 
 .ml-auto{
   margin-left: auto;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .mb-6{
@@ -745,6 +765,10 @@ video {
   height: 120px;
 }
 
+.h-12{
+  height: 3rem;
+}
+
 .h-7{
   height: 1.75rem;
 }
@@ -785,8 +809,16 @@ video {
   width: 80%;
 }
 
+.w-12{
+  width: 3rem;
+}
+
 .w-7{
   width: 1.75rem;
+}
+
+.min-w-\[25\%\]{
+  min-width: 25%;
 }
 
 .max-w-sm{
@@ -801,12 +833,31 @@ video {
   flex-grow: 1;
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+@-webkit-keyframes spin{
+  to{
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin{
+  to{
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.animate-spin{
+  -webkit-animation: spin 1s linear infinite;
+          animation: spin 1s linear infinite;
 }
 
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row-reverse{
@@ -857,19 +908,6 @@ video {
   gap: 1rem;
 }
 
-.gap-x-4{
-  -webkit-column-gap: 1rem;
-          column-gap: 1rem;
-}
-
-.gap-y-6{
-  row-gap: 1.5rem;
-}
-
-.gap-y-4{
-  row-gap: 1rem;
-}
-
 .gap-y-3{
   row-gap: 0.75rem;
 }
@@ -881,6 +919,19 @@ video {
 .gap-x-6{
   -webkit-column-gap: 1.5rem;
           column-gap: 1.5rem;
+}
+
+.gap-x-4{
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+}
+
+.gap-y-6{
+  row-gap: 1.5rem;
+}
+
+.gap-y-4{
+  row-gap: 1rem;
 }
 
 .self-center{
@@ -973,6 +1024,11 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-gray-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
+
 .border-primaryOrange{
   --tw-border-opacity: 1;
   border-color: rgb(235 94 40 / var(--tw-border-opacity));
@@ -1036,12 +1092,20 @@ video {
   --tw-bg-opacity: 0.2;
 }
 
+.bg-opacity-60{
+  --tw-bg-opacity: 0.6;
+}
+
 .bg-classroom{
   background-image: url('./assets/background.jpg');
 }
 
 .bg-cover{
   background-size: cover;
+}
+
+.fill-blue-600{
+  fill: #2563eb;
 }
 
 .stroke-primaryOrange{
@@ -1136,6 +1200,11 @@ video {
 .py-1\.5{
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .text-center{
@@ -1255,6 +1324,11 @@ video {
   color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
+.text-gray-200{
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
 .text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -1262,6 +1336,22 @@ video {
 
 .underline-offset-2{
   text-underline-offset: 2px;
+}
+
+.opacity-0{
+  opacity: 0;
+}
+
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline-red-800{
@@ -1279,6 +1369,20 @@ video {
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-300{
+  transition-duration: 300ms;
+}
+
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .hover\:underline:hover{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1286,6 +1390,13 @@ video {
 
 .focus\:outline-0:focus{
   outline-width: 0px;
+}
+
+@media (prefers-color-scheme: dark){
+  .dark\:text-gray-600{
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity));
+  }
 }
 
 @media (min-width: 768px){
