--- a/public/styles.css
+++ b/public/styles.css
@@ -686,10 +686,6 @@ video {
   margin-bottom: 1rem;
 }
 
-.-ml-5{
-  margin-left: -1.25rem;
-}
-
 .mt-4{
   margin-top: 1rem;
 }
@@ -698,12 +694,16 @@ video {
   margin-right: 0.5rem;
 }
 
+.-ml-5{
+  margin-left: -1.25rem;
+}
+
 .-mt-\[60px\]{
   margin-top: -60px;
 }
 
-.ml-0{
-  margin-left: 0px;
+.ml-1{
+  margin-left: 0.25rem;
 }
 
 .mt-0\.5{
@@ -720,10 +720,6 @@ video {
 
 .mr-6{
   margin-right: 1.5rem;
-}
-
-.mr-5{
-  margin-right: 1.25rem;
 }
 
 .block{
@@ -758,6 +754,10 @@ video {
   height: 1.25rem;
 }
 
+.h-12{
+  height: 3rem;
+}
+
 .h-4{
   height: 1rem;
 }
@@ -774,16 +774,8 @@ video {
   height: 120px;
 }
 
-.h-12{
-  height: 3rem;
-}
-
 .h-7{
   height: 1.75rem;
-}
-
-.h-9{
-  height: 2.25rem;
 }
 
 .min-h-screen{
@@ -800,6 +792,10 @@ video {
 
 .w-5{
   width: 1.25rem;
+}
+
+.w-12{
+  width: 3rem;
 }
 
 .w-4{
@@ -822,20 +818,8 @@ video {
   width: 80%;
 }
 
-.w-12{
-  width: 3rem;
-}
-
 .w-7{
   width: 1.75rem;
-}
-
-.w-auto{
-  width: auto;
-}
-
-.w-9{
-  width: 2.25rem;
 }
 
 .min-w-\[25\%\]{
@@ -1030,14 +1014,14 @@ video {
   border-color: rgb(17 24 39 / var(--tw-border-opacity));
 }
 
-.border-gray-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-gray-300{
@@ -1275,11 +1259,6 @@ video {
   line-height: 1.5rem;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -1303,6 +1282,10 @@ video {
 
 .uppercase{
   text-transform: uppercase;
+}
+
+.capitalize{
+  text-transform: capitalize;
 }
 
 .text-gray-500{
@@ -1373,6 +1356,11 @@ video {
 .text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-red-900{
+  --tw-text-opacity: 1;
+  color: rgb(127 29 29 / var(--tw-text-opacity));
 }
 
 .underline-offset-2{
